@@ -1,3 +1,7 @@
+2006-07-21  Miguel Sofer  <msofer@users.sf.net>
+	* generic/tclExecute.c:
+	* tests/execute.test (execute-9.1): dgp's fix for [Bug 1522803].
+
 2006-07-20   Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tclMacOSXNotify.c (Tcl_InitNotifier, Tcl_WaitForEvent): create
